--- a/css/common.css
+++ b/css/common.css
@@ -8,7 +8,7 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to right, #1cd8d2, #93edc7);
+  background-image: linear-gradient(to right, #614385, #516395);
   color: #212121;
   line-height: 1.5;
 }
